; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_IsRetAtEIP.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_utils.c_IsRetAtEIP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"IsRetAtEIP()\0A\00", align 1
@CurrentCS = common dso_local global i32 0, align 4
@CurrentEIP = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsRetAtEIP() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @FALSE, align 4
  store i32 %3, i32* %2, align 4
  %4 = call i32 (...) @ENTER_FUNC()
  %5 = call i32 @DPRINT(i32 ptrtoint ([14 x i8]* @.str to i32))
  %6 = load i32, i32* @CurrentCS, align 4
  %7 = load i32, i32* @CurrentEIP, align 4
  %8 = call i64 @GetLinearAddress(i32 %6, i32 %7)
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %1, align 8
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %14 [
    i32 194, label %12
    i32 195, label %12
    i32 202, label %12
    i32 203, label %12
    i32 207, label %12
  ]

12:                                               ; preds = %0, %0, %0, %0, %0
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %0, %12
  %15 = call i32 (...) @LEAVE_FUNC()
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i64 @GetLinearAddress(i32, i32) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
